--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -12,15 +12,10 @@ body{
         grid-column: 1 / 3;
         grid-row: 1 / 2;
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: 100%;
-        align-items: center;
-        justify-items: center;
+        align-self: center;
+        justify-self: center;
         h1{
             grid-column: 2 / 3;
-        }
-        .addTask{
-            grid-column: 3 / 4;
         }
     }
     .mainContent{
