--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -25,7 +25,7 @@
         font-size: 35px;
         text-align: center;
       }
-      .addTask{
+      .add-task{
         grid-column: 3 / 4;
         background-color: #472D30;
         color: #FFE1A8;
