--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -1,5 +1,5 @@
 @use './fonts.scss';
-.sideMenu{
+.side-menu{
   background-color: #E26D5C;
   grid-column: 1 / 2;
   grid-row: 2 / 3;
@@ -31,14 +31,14 @@
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: 10% auto;
-    .projectTabHeader{
+    .project-tab-Header{
       display: flex;
       align-items: center;
       gap: 30px;
       h3{
         margin: 0;
       }
-      .addProject{
+      .add-project{
         background-color: #472D30;
         color: #C9CBA3;
         height: 35px;
@@ -55,7 +55,7 @@
         }
       }      
     }
-    .listProjects{
+    .list-projects{
       list-style-type: none;
       padding: 0;
       display: grid;
