--- a/src/styles/projectModal.scss
+++ b/src/styles/projectModal.scss
@@ -47,13 +47,13 @@
           padding: 5px 15px;
           border-radius: 5px;
         }
-        .projectModalAdd{
+        .project-modal-add{
           background-color: #C9CBA3;
           &:hover{
             background-color: #E4D6A6;
           }
         }
-        .projectModalCancel{
+        .project-modal-cancel{
           background-color: #AA5551;
           &:hover{
             background-color: #E26D5C;
